Prepare Layout + work with fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
+
     <string name="app_name">CNTest</string>
+
+    <!-- Main Fragment -->
+    <string name="text_random_joke">Random Joke</string>
+    <string name="text_text_input">Text Input</string>
+    <string name="text_never_ending">Never-ending List</string>
+
+
 </resources>
