Implement Rest Class + First task (Dialog)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <string name="app_name">CNTest</string>
+    <string name="text_dismiss">Dismiss</string>
 
     <!-- Main Fragment -->
     <string name="text_random_joke">Random Joke</string>
