Improve Text Input validation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="text_never_ending">Never-ending List</string>
 
     <!-- TextInputFragment -->
-    <string name="edit_text_hint">Insert Character</string>
+    <string name="edit_text_hint">Insert Character Name</string>
 
 
 </resources>
