Show error followind design guidelines

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <!-- TextInputFragment -->
     <string name="edit_text_hint">Insert Character Name</string>
+    <string name="name_input_error">"Input text must be in the form \"&lt;name&gt; &lt;lastname&gt;\"</string>
 
 
 </resources>
